--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -88,10 +88,11 @@ regions fullwidth
 
 
 
-/* MENU PRINCIPAL
+/* MENU PRINCIPAL (besoins)
 .navigation .gva_menu li a = .menu--besoins
 */
-.menu--besoins li a {
+.menu--besoins li a,
+.menu--main li a {
     text-align: left !important;
 }
 .menu--besoins > li > a {
@@ -110,20 +111,29 @@ regions fullwidth
     color: #656565;
 }
 
-.menu--besoins > li:hover a {
+.menu--besoins > li:hover a,
+.menu--main > li:hover a {
     color: #86BC42 !important;
 }
 /* todo: active trail à activer */
-.menu--besoins > li.menu-item--active-trail > a {
+.menu--besoins > li.menu-item--active-trail > a,
+.menu--main > li.menu-item--active-trail > a {
     color: #86BC42 !important;
+}
+
+.menu--menu-secondaire li {
+  list-style: none;
 }
 
 /**
 * blocs headers
 */
+
+#block-crise-main-menu,
 #block-besoins {
   float: right;
 }
+#block-crise-formulaireexposeenvironnement-recherchepage-1,
 #block-crise-search {
   float: right;
 }
