Fix pour flexslider de la page d'accueil
(les éléments de la vue sont non-visibles sur écran, présent dans HTML, mais le JS de flexslider n'embarque plus montrer et cacher les éléments selon la logique du thème)

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -151,3 +151,10 @@ regions fullwidth
 	background: none;
 	border: none;
 }
+
+/* flexslider : fix */
+flexslider .slides > li {
+    display: inline-block !important;
+    width: 33%;
+    float: left;
+}
