--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -153,7 +153,7 @@ regions fullwidth
 }
 
 /* flexslider : fix */
-flexslider .slides > li {
+.flexslider .slides > li {
     display: inline-block !important;
     width: 33%;
     float: left;
