--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -148,15 +148,14 @@ regions fullwidth
 
 /* Barre Grise (region Breadcrumb) */
 .page-header {
-    padding-bottom: 0;
-    margin: 0;
-    border-bottom: none;
+    padding-bottom: 0 !important;
+    margin: 0 !important;
+    border-bottom: none !important;
 }
-
 
 /*temp*/
 .alert-info {
-	background: none;
-	border: none;
+background: none;
+border: none;
 }
 
