--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -153,9 +153,144 @@ regions fullwidth
     border-bottom: none !important;
 }
 
-/*temp*/
+/* Région Aide/Alertes */
 .alert-info {
-background: none;
-border: none;
+  background: none;
+  border: none;
+  padding: 0;
+}
+.alert-info .icon {
+  display: none;
 }
 
+
+/* Menus */
+/* Retirer puces CSS sur items de menu */
+ul.menu > li a:after {
+  display: none;
+}
+
+#block-menusecondaire-2 {
+  display: inline-block;
+}
+
+/* Régions (suite) */
+.page_bottom {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.footer {
+  background: #000;
+}
+
+
+/* Noeuds*/
+/*add2any float right */
+#block-addtoanybuttons-2  {
+  display: inline-block;
+  float: right;
+}
+
+.content .field {
+  margin-bottom: 2em;
+}
+.field--label {
+  font-weight: bold;
+}
+
+/* Sidebars */
+/* Titres des blocs dans la sidebar */
+.well,
+.region-sidebar-first {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 20px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.block .block-title {
+  background: none;
+  position: relative;
+  margin: 0 0 10px;
+  color: #86BC42;
+  border-bottom: 1px solid #86BC42;
+  z-index: 1;
+}
+.block .block-title > span {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  letter-spacing: 1px;
+  color: #222;
+  padding: 10px 0 10px;
+  z-index: 9;
+}
+
+
+/* Taxos listes dans la sidebar */
+.item-list ul {
+  overflow: hidden;
+  padding: 0;
+}
+.item-list ul li.view-list-item {
+  margin: 0 0 30px;
+  overflow: hidden;
+  list-style-type: none;
+}
+
+.region-sidebar-second,
+.region-sidebar-first {
+  .item-list ul li {
+    border: none;
+    margin: 0 0 10px !important;
+    padding: 0 !important;
+    border: none !important;
+  }
+  .item-list ul li a {
+    padding: 10px 10px 10px 20px;
+    display: block;
+    border: 1px solid #EEEEEE;
+    background: #F6F6F6;
+    color: #bbbbbb;
+    text-transform: none;
+    font-size: 13px;
+    overflow: hidden;
+    -webkit-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    position: relative;
+  }
+  .item-list ul li a:after {
+    content: "\f178";
+    position: absolute;
+    top: 10px;
+    left: -20px;
+    font-family: "FontAwesome";
+    z-index: 1;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    visibility: hidden;
+    -webkit-transition: all 0.35s;
+    -o-transition: all 0.35s;
+    transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    color: #86BC42;
+  }
+  .item-list ul li a:hover, 
+  .item-list ul li a:focus, 
+  .item-list ul li a:active {
+    color: #86BC42;
+    padding-left: 40px;
+  } 
+}
+
+/* Accueil bloc recherche à développer */
