--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -201,15 +201,16 @@ ul.menu > li a:after {
 /* Sidebars */
 /* Titres des blocs dans la sidebar */
 .well,
-.region-sidebar-first {
+.region-sidebar-first,
+.region-sidebar-second {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 20px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+  border: none;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .block .block-title {
@@ -219,8 +220,7 @@ ul.menu > li a:after {
   color: #86BC42;
   border-bottom: 1px solid #86BC42;
   z-index: 1;
-}
-.block .block-title > span {
+/*span*/
   display: inline-block;
   font-size: 14px;
   font-weight: 700;
@@ -246,51 +246,55 @@ ul.menu > li a:after {
 
 .region-sidebar-second,
 .region-sidebar-first {
-  .item-list ul li {
+  .field--type-entity-reference {
     border: none;
     margin: 0 0 10px !important;
     padding: 0 !important;
     border: none !important;
+    /* Liens Taxos Sidebar */
+        a {
+        padding: 10px 10px 10px 20px;
+        display: block;
+        border: 1px solid #EEEEEE;
+        background: #F6F6F6;
+        color: #bbbbbb;
+        text-transform: none;
+        font-size: 13px;
+        overflow: hidden;
+        -webkit-transition: all 0.35s;
+        -o-transition: all 0.35s;
+        transition: all 0.35s;
+        -moz-transition: all 0.35s;
+        -ms-transition: all 0.35s;
+        position: relative;
+      }
+      a:after {
+        content: "\f178";
+        position: absolute;
+        top: 10px;
+        left: -20px;
+        font-family: "FontAwesome";
+        z-index: 1;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        visibility: hidden;
+        -webkit-transition: all 0.35s;
+        -o-transition: all 0.35s;
+        transition: all 0.35s;
+        -moz-transition: all 0.35s;
+        -ms-transition: all 0.35s;
+        color: #86BC42;
+      }
+      a:hover, 
+      a:focus, 
+      a:active {
+        color: #86BC42;
+        padding-left: 40px;
+      }
+
   }
-  .item-list ul li a {
-    padding: 10px 10px 10px 20px;
-    display: block;
-    border: 1px solid #EEEEEE;
-    background: #F6F6F6;
-    color: #bbbbbb;
-    text-transform: none;
-    font-size: 13px;
-    overflow: hidden;
-    -webkit-transition: all 0.35s;
-    -o-transition: all 0.35s;
-    transition: all 0.35s;
-    -moz-transition: all 0.35s;
-    -ms-transition: all 0.35s;
-    position: relative;
-  }
-  .item-list ul li a:after {
-    content: "\f178";
-    position: absolute;
-    top: 10px;
-    left: -20px;
-    font-family: "FontAwesome";
-    z-index: 1;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    visibility: hidden;
-    -webkit-transition: all 0.35s;
-    -o-transition: all 0.35s;
-    transition: all 0.35s;
-    -moz-transition: all 0.35s;
-    -ms-transition: all 0.35s;
-    color: #86BC42;
-  }
-  .item-list ul li a:hover, 
-  .item-list ul li a:focus, 
-  .item-list ul li a:active {
-    color: #86BC42;
-    padding-left: 40px;
-  } 
+
+  /* autres règles sidebar */
 }
 
 /* Accueil bloc recherche à développer */
