Harmoniser toutes les régions du footer

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -67,9 +67,7 @@ regions fullwidth
 .main_navigation {
 
 }
-.footer_navigation {
-  background: #000;
-}
+
 
 /*.breadcrumb-content-inner .gva-breadcrumb-content .gva-block-breadcrumb .breadcrumb-style */
 .title_breadcrumb {
@@ -171,7 +169,9 @@ ul.menu > li a:after {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-.footer {
+.footer,
+.copyright,
+.footer_navigation  {
   background: #000;
 }
 
