Vues + Listes - règles générales

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -310,3 +310,9 @@ ul.menu > li a:after {
 /* Accueil bloc recherche à développer */
 
 
+/* Vues + Listes - règles générales */
+.views-row {
+  margin-bottom: 2em;
+}
+/* TODO: Exceptions */
+
