--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -315,4 +315,12 @@ ul.menu > li a:after {
   margin-bottom: 2em;
 }
 /* TODO: Exceptions */
-
+/* Source: edubiz/home-2 : Our Services */
+.views-field-title,
+.widget.gsc-icon-box .highlight_content .title {
+    font-size: 16px;
+    font-family: "Poppins",sans-serif;
+    font-weight: 600;
+    color: #222;
+    margin-bottom: 3px;
+} 
