--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -38,6 +38,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1.1;
     color: #262C38;
 }
+p {
+  margin-bottom: 1em;
+}
+
 /* .menu--besoins */
 .nav > li,
 .nav > li > a {
@@ -141,6 +145,9 @@ regions fullwidth
     padding-bottom: 0 !important;
     margin: 0 !important;
     border-bottom: none !important;
+}
+#block-addtoanybuttons-2 {
+  margin-bottom: 0;
 }
 
 /* Région Aide/Alertes */
