Souligné Custom des titres de section dans le thème Edubiz
Dépend du HTML lié.

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -369,6 +369,41 @@ Recherche, Modeles, Services, Ref Biblio
   text-align: center;
 }
 
+
+/* Souligné Custom des titres de section dans le thème Edubiz */ 
+.heading-line {
+  position: relative;
+  display: block;
+  text-align: center;
+  height: 10px;
+  line-height: 5px;
+
+  span {
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    display: inline-block;
+    margin: 0 5px;
+  }
+  span.one {
+    background: #5EB4E7;
+    margin-left: 0;
+  }
+  span.second {
+    background: #F8C44F;
+  }
+  span.three {
+    background: #F49626;
+    margin-right: 0;
+  }
+
+}
+
+
 /* Responsive @media */
 /* mobile */
 @media (max-width: 460px) {}
@@ -383,4 +418,4 @@ Recherche, Modeles, Services, Ref Biblio
 /* écrans larges */
 @media all and (min-width: 1200px) and (max-width: 9999px) {}
 
-
+/**/
