--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -410,7 +410,7 @@ Recherche, Modeles, Services, Ref Biblio
 }
 
 /* Icones dans Fil Ariane, sur Besoin */
-.region-breadcrumb .block-contenufield {
+#block-contenufield {
   float: left;
   padding-right: 30px;
 }
