--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -447,7 +447,117 @@ Recherche, Modeles, Services, Ref Biblio
 }
 
 
+/**
+* Typographie
+*/
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Poppins",sans-serif;
+    font-weight: 600;
+    line-height: 1.1;
+    color: #262C38;
+}
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+h4, .h4, h5, .h5, h6, .h6 {
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+h4, h5 {
+    line-height: 1.4;
+}
+h1, .h1 {
+    font-size: 32px;
+}
+h2, .h2 {
+    font-size: 28px;
+}
+h3, .h3 {
+    font-size: 22px;
+}
+
+h4, .h4 {
+    font-size: 18px;
+}
+h5, .h5 {
+    font-size: 16px;
+}
+.margin-bottom-30 {
+    margin-bottom: 30px !important;
+}
+.text-white {
+    color: #fff !important;
+}
+.bg-theme {
+    background: #86BC42;
+}
+.bg-black {
+    background: #333333;
+}
+.dropcap {
+    display: block;
+    float: left;
+    font-size: 40px;
+    line-height: 34px;
+    color: #444;
+    margin: 6px 8px 0 0;
+}
+.dropcap.border-dropcap {
+    border: 2px solid #444;
+    width: 46px;
+    height: 46px;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    margin: 8px 12px 0 0;
+}
+.dropcap.circle-dropcap {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 2px solid #444;
+    width: 46px;
+    height: 46px;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    margin: 8px 12px 0 0;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 14px;
+}
+ul li {
+    list-style: inherit;
+}
+
+
+ul {
+    margin: 0;
+    padding-left: 30px;
+}
 
 /* Responsive @media */
 /* mobile */
