--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -150,7 +150,7 @@ regions fullwidth
 .page-title,
 .page-header {
     font-size: 18px;
-    float: right;
+    float: left;
     margin-bottom: 0;
     margin-top: 0;
 }
