--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -642,7 +642,8 @@ ul {
     color: #222;
     letter-spacing: 1px;
 }
-.path-frontpage .block-title {
+.path-frontpage .block-title,
+.block-recherchetextepresentationmodele .block-title {
   text-align: center;
   color: #000;
   border: none;
