--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -643,7 +643,7 @@ ul {
     letter-spacing: 1px;
 }
 .path-frontpage .block-title,
-.block-recherchetextepresentationmodele .block-title {
+#block-recherchetextepresentationmodele .block-title {
   text-align: center;
   color: #000;
   border: none;
