Recherche: Aligner les facettes

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -678,7 +678,10 @@ nav.pager-nav {
     display: inline-block;
 }
 
-
+/* facettes */
+.facets-widget-links ul {
+  padding-left: 0;
+}
 
 /* Responsive @media */
 /* mobile */
