--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -389,6 +389,7 @@ ul.menu > li a:after {
 }
 
 
+
 /* Accueil bloc recherche à développer */
 
 
@@ -645,12 +646,14 @@ ul {
     color: #222;
     letter-spacing: 1px;
 }
-.path-frontpage .block-title,
-.path-recherche .region-header .block-title {
+/* Titre Blocs dans Contenu (exclure footer) */
+.path-frontpage .main-container .block-title,
+.path-recherche .main-container .region-header .block-title {
   text-align: center;
   color: #000;
   border: none;
   font-size: 22px;
+  padding-bottom: 30px;
 }
 
 
@@ -768,7 +771,7 @@ nav.pager-nav {
     content: '';
     width: 10%;
     height: 5px;
-    background: #86BC42;
+    background: url("../images/edubiz_separator.gif") no-repeat center center;
     position: absolute;
     bottom: 0;
     left: 45%;
