--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -653,7 +653,7 @@ ul {
   color: #000;
   border: none;
   font-size: 25px;
-  font-weight: 600
+  font-weight: 600;
   padding-bottom: 30px;
   text-transform: initial;
 }
