--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -85,9 +85,16 @@ p {
   }
 }
 
+
+
+
 /**
 * Regions
 */
+.region-content {
+  margin-bottom: 90px;
+}
+
 /* Fullwidth */
 .fullwidth {
   width: 100%;
@@ -827,8 +834,35 @@ nav.pager-nav {
   background-color: #000;
 }
 
+/* Glossaire - Bonifications */
+.path-glossaire {
+  .alert {
+    margin-bottom:0;
+  }
+  .title_breadcrumb {
+    margin-bottom:0;
+  }
+  .attachment-before {
+    margin-bottom: 45px;
+    font-size: 22px;
+  }
+  .view-content .views-row {
+    margin-bottom: 4em;
+  }
+}
 
-/* TODO : fleches flexslider - accueil besoins, accueil groupe */
+/* Liens Read More*/
+.view-node a {
+    font-family: "Poppins",sans-serif;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+
+/* Contact - Bonifications */
+/* TODO*/
+
+/* TODO : fleches custom flexslider - accueil besoins, accueil groupe */
 
 /* Responsive @media */
 /* mobile */
