--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -574,6 +574,10 @@ ul.menu > li a:after {
 .views-row {
   margin-bottom: 2em;
 }
+.path-bibcite {
+  margin-bottom: 0;
+}
+
 /* TODO: Exceptions */
 /* Source: edubiz/home-2 : Our Services
 * .widget.gsc-icon-box .highlight_content .title
