--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -574,9 +574,6 @@ ul.menu > li a:after {
 .views-row {
   margin-bottom: 2em;
 }
-.path-bibcite {
-  margin-bottom: 0;
-}
 
 /* TODO: Exceptions */
 /* Source: edubiz/home-2 : Our Services
@@ -602,7 +599,9 @@ ul.menu > li a:after {
   .views-field-title {
     font-size: 15px;
     font-weight: normal;
-
+  }
+  .views-row {
+    margin-bottom: 0;
   }
 }
 
